--- a/work/LAP_100.html
+++ b/work/LAP_100.html
@@ -129,8 +129,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -536,7 +535,7 @@
     <div class="layer-pop" data-pop="pop-2">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">평생교육이용권 사용기관 신청을 위한 개인정보 수집 · 이용 동의(필수)</span>
+                <span class="title">평생교육이용권 신청을 위한 개인정보 수집 · 이용 동의(필수)</span>
                 <div class="info-area">
                     <div class="layer-agree-box layer-scroll-box">
                         <p>
@@ -708,7 +707,7 @@
     <div class="layer-pop" data-pop="pop-3">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">평생교육이용권 사용기관 신청을 위한 개인정보 수집 · 이용 동의(선택)</span>
+                <span class="title">평생교육이용권 신청을 위한 개인정보 수집 · 이용 동의(선택)</span>
                 <div class="info-area">
                     <p class="desc">
                         평생교육이용권 홈페이지에서 제공하는 인터넷 관련 서비스를 원활하게 수행하기 위하여 개인정보의 수집,유출,오용,남용으로부터 사생활의 비밀 등을 보호하도록 한 
