--- a/work/LAP_102.html
+++ b/work/LAP_102.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -198,7 +197,7 @@
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="add-info col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
@@ -216,7 +215,7 @@
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="add-info col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
