--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -639,8 +638,8 @@
                                         <label for="certiNumSend">휴대전화번호</label>       
                                     </th>
                                     <td>
-                                        <div class="flex-ac">
-                                            <input type="number">
+                                        <div class="flex-ac auth-num">
+                                            <input type="number" placeholder="010-****-1234">
                                             <button class="btns bg-blue">전송</button>
                                         </div>
                                     </td>
