--- a/work/LAP_104.html
+++ b/work/LAP_104.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -363,7 +362,7 @@
                                     <th class="txt-c sm-txt-l">신청인 성명</th>
                                     <td class="txt-c">홍길동</td>
                                     <th class="txt-c sm-txt-l"><label for="confirm2">확인</label></th>
-                                    <td class="txt-c"><input type="checkbox" id="confirm2" checked></td>
+                                    <td class="txt-c"><input type="checkbox" id="confirm2"></td>
                                 </tr>
                             </tbody>
                         </table>
