--- a/work/LAP_113.html
+++ b/work/LAP_113.html
@@ -20,8 +20,8 @@
         <div class="new-window-content">
             <div class="new-window-scroll">
                 <span class="title">자격검증</span>
-                <div class="info-area">
-                    <div class="com-view-table">
+                <div class="info-area auth-res">
+                    <div class="com-write-table">
                         <table>
                             <caption>자격검증</caption>
                             <colgroup>
@@ -59,72 +59,29 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="border-box-20">
-                        
+                    <div class="layer-border-box">
+                        홍길동님은 선택하신 충청남도 <span class="col-pri">평생교육이용권(디지털형)</span>을 <br class="lg-only">신청하실 수 있습니다.
                     </div>
-                </div>    
-
-
-
-
-                <!-- <div class="info-area auth-res">
-                    <div class="border-box-20">
-                        <div class="data-list">
-                            <dl>
-                                <dt>성명</dt>
-                                <dd>홍길동</dd>
-                            </dl>
-                            <dl>
-                                <dt>주민등록번호</dt>
-                                <dd>991218-1******</dd>
-                            </dl>
-                            <dl>
-                                <dt>
-                                    평생교육 <br>
-                                    이용권 유형 
-                                </dt>
-                                <dd class="data-radio-list">
-                                    <div class="flex-ac">
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="reg" checked>
-                                            <label for="reg">지역특화</label>
-                                        </div>
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="dig">
-                                            <label for="dig">디지털</label>
-                                        </div>
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="old">
-                                            <label for="old">노인</label>
-                                        </div>
-                                    </div>
-                                </dd>
-                            </dl>
-                        </div>
-                        <div class="border-box-20">
-                            <p class="auth-res-txt">홍길동님은 선택하신 충청남도 평생교육이용권(디지털형)을 신청하실 수 있습니다.</p>
-                        </div>
-                        <div class="auth-res-agree">
-                            <p class="auth-res-detail">
-                                위 신청 자격을 확인하였으며, <br class="auth-res-br">이에 동의하고 신청을 진행합니다. <br>
-                                지금부터 작성하는 서류는 해당 지자체장 및 국가평생교육진흥원장에게 귀속됩니다.
-                            </p>
-                            <div class="radio-wrap">
-                                <div class="radio-box">
-                                    <input type="radio" name="auth" id="yes">
-                                    <label for="yes">예</label>
-                                </div>
-                                <div class="radio-box">
-                                    <input type="radio" name="auth" id="no">
-                                    <label for="no">아니오</label>
-                                </div>
+                    <div class="layer-auth-agree">
+                        <p>
+                            위 신청 자격을 확인하였으며, 이에 동의하고 신청을 진행합니다. <br class="lg-only">
+                            지금부터 작성하는 서류는 해당 지자체장 및 국가평생교육진흥원장에게 귀속됩니다.
+                        </p>
+                        <div class="radio-wrap">
+                            <div class="radio-box">
+                                <input type="radio" id="1" checked>
+                                <label for="1">예</label>
+                            </div>
+                            <div class="radio-box">
+                                <input type="radio" id="2">
+                                <label for="1">아니오</label>
                             </div>
                         </div>
-                    </div>         
+                    </div>
                     <div class="new-window-btn-wrap">
                         <button class="btns" onclick="window.close()">확인</button>
                     </div>
-                </div> -->
+                </div>    
             </div>
         </div>
     </div>
