--- a/work/LGP_001.html
+++ b/work/LGP_001.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -168,60 +167,67 @@
 
                     <div class="info-tit-box">
                         <h2 class="info-tit">평생교육이용권이란?</h2>
-                        <p class="sub-txt-box">평생교육법 제2조 등에 따라 학습자 본인의 학습 요구에 따라 자율적으로 학습 활동을 결정하고 참여할 수 있도록 정부가 제공하는 평생교육이용권입니다.</p>
+                        <div class="info-box sub-txt"><p>평생교육법 제2조 등에 따라 학습자 본인의 학습 요구에 따라 자율적으로 학습 활동을 결정하고 참여할 수 있도록 정부가 제공하는 평생교육이용권입니다.</p></div>
                     </div>
                     <div class="info-conts">
                         <img src="../images/biz2/lgp001.png" alt="">
                         <div class="info-inner-conts">
                             <h3>평생교육이용권 사용기관이란?</h3>
-                            <p class="sub-txt-box">평생교육이용권 카드를 사용하여 수강료를 결제할 수 있는 기관을 의미합니다.<br>평생교육이용권 이용자에게 우수한 평생교육 강좌 참여기회를 제공하고, 지속적인 학습 참여를 독려하는 역할을 수행합니다.</p>
+                            <div class="info-box sub-txt">평생교육이용권 카드를 사용하여 수강료를 결제할 수 있는 기관을 의미합니다.<br>평생교육이용권 이용자에게 우수한 평생교육 강좌 참여기회를 제공하고, 지속적인 학습 참여를 독려하는 역할을 수행합니다.</div>
                             <p class="bullet">세부 자격 및 지원 내용은 주민등록등본상 주소지의 평생교육이용권 홈페이지에서 확인하시기 바랍니다.</p>
                         </div>
                         <div class="info-inner-conts">
                             <h3>평생교육이용권 사용기관 유형</h3>
                             <ol>
-                                <li>「평생교육법」에 따라 인가·등록·신고된 시설·법인 또는 단체</li>
-                                <li>「학원의 설립ㆍ운영 및 과외교습에 관한 법률」에 따른 학원 중 교과교습학원을 제외한 평생직업교육을 실시하는 학원</li>
-                                <li>그 밖에 다른 법령에 따라 평생교육을 주된 목적으로 하는 시설·법인 또는 단체기관<p class="bullet">「평생교육법」 제2조에 따른 평생교육기관</p></li>
+                                <li>1. 「평생교육법」에 따라 인가·등록·신고된 시설·법인 또는 단체</li>
+                                <li>2. 「학원의 설립ㆍ운영 및 과외교습에 관한 법률」에 따른 학원 중 교과교습학원을 제외한 평생직업교육을 실시하는 학원</li>
+                                <li>3. 그 밖에 다른 법령에 따라 평생교육을 주된 목적으로 하는 시설·법인 또는 단체기관<p class="bullet">「평생교육법」 제2조에 따른 평생교육기관</p></li>
                             </ol>
                         </div>
                         <div class="info-inner-conts">
                             <h3>평생교육이용권 사용기관으로 등록하기</h3>
                             <h4>등록절차</h4>
-                            <ul class="reg-step">
-                                <li>
-                                    <span class="step-img">1</span>
+                            <ul class="info-box reg-step">
+                                <li class="step1">
+                                    <span class="step-img">약관동의</span>
                                     <span class="step-num">01</span>
                                     <strong class="step-tit">약관동의</strong>
                                 </li>
-                                <li>
-                                    <span class="step-img">1</span>
+                                <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음단계"></li>
+                                <li class="step2">
+                                    <span class="step-img">본인인증</span>
                                     <span class="step-num">02</span>
-                                    <strong class="step-tit">약관동의</strong>
+                                    <strong class="step-tit">본인인증</strong>
                                 </li>
-                                <li>
-                                    <span class="step-img">1</span>
+                                <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음단계"></li>
+                                <li class="step3">
+                                    <span class="step-img">신청서 작성</span>
                                     <span class="step-num">03</span>
-                                    <strong class="step-tit">약관동의</strong>
+                                    <strong class="step-tit">신청서 작성</strong>
                                 </li>
-                                <li>
-                                    <span class="step-img">1</span>
+                                <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음단계"></li>
+                                <li class="step4">
+                                    <span class="step-img">담당자 등록</span>
                                     <span class="step-num">04</span>
-                                    <strong class="step-tit">약관동의</strong>
+                                    <strong class="step-tit">담당자 등록</strong>
                                 </li>
-                                <li>
-                                    <span class="step-img">1</span>
+                                <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음단계"></li>
+                                <li class="step5">
+                                    <span class="step-img">첨부</span>
                                     <span class="step-num">05</span>
-                                    <strong class="step-tit">약관동의</strong>
+                                    <strong class="step-tit">첨부</strong>
                                 </li>
-                                <li>
-                                    <span class="step-img">1</span>
+                                <li class="step-arrow"><img src="../images/biz2/step/step_arrow.svg" alt="다음단계"></li>
+                                <li class="step6">
+                                    <span class="step-img">작성완료</span>
                                     <span class="step-num">06</span>
-                                    <strong class="step-tit">약관동의</strong>
+                                    <strong class="step-tit">작성완료</strong>
                                 </li>
                             </ul>
-                            <p class="bullet">신청 기간 및 방법 : 온라인 상시접수</p>
-                            <p class="bullet">평생교육시설 신고증을 발급받은 광역지자체의 평생교육이용권 홈페이지 내 사용기관 등록 메뉴</p>
+                            <div>
+                                <p class="bullet">신청 기간 및 방법 : 온라인 상시접수</p>
+                                <p class="bullet">평생교육시설 신고증을 발급받은 광역지자체의 평생교육이용권 홈페이지 내 사용기관 등록 메뉴</p>
+                            </div>
                         </div>
                     </div>
 
@@ -324,7 +330,7 @@
                                 </li>
                                 <li class="arrow"><img src="../images/biz2/ico/ico_arrow.svg" alt="다음"></li>
                                 <li class="step08">
-                                    <span>8. 이용 완료!</span>
+                                    <span>8. 이용 완료</span>
                                 </li>
                             </ul>
                         </div>
