--- a/work/LIP_400.html
+++ b/work/LIP_400.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -269,25 +268,32 @@
         </div>
     </footer>
     <div class="layer-pop" data-pop="apply-info">
-        <div class="layer-content" style="--max-width: 640px">
+        <div class="layer-content" style="--max-width: 840px">
             <div class="layer-scroll">
                 <span class="title">신청 정보 확인</span>
                 <div class="info-area">
-                    <div class="border-box-20">
-                        <div class="data-list">
-                            <dl>
-                                <dt>성명</dt>
-                                <dd>홍길동</dd>
-                            </dl>
-                            <dl>
-                                <dt>전화번호</dt>
-                                <dd>010-****-1212</dd>
-                            </dl>
-                            <dl>
-                                <dt>주소</dt>
-                                <dd>서울특별시 은평구 연신 1로 20</dd>
-                            </dl>
-                        </div>
+                    <div class="com-write-table">
+                        <table>
+                            <caption>신청 정보 확인</caption>
+                            <colgroup>
+                                <col style="width: 190px;">
+                                <col>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th class="txt-l">성명</th>
+                                    <td class="txt-l">홍길동</td>
+                                </tr>
+                                <tr>
+                                    <th class="txt-l">휴대전화번호</th>
+                                    <td class="txt-l">010-****-1212</td>
+                                </tr>
+                                <tr>
+                                    <th class="txt-l">주소</th>
+                                    <td class="txt-l">서울특별시 은평구 연신 1로 20</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                     <p class="bullet">회원정보가 다를 경우, 경품 배송이 어려우니 개인정보 수정에서 수정해주세요.</p>                    
                     <div class="layer-btn-wrap">
