--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -463,7 +462,7 @@
                 <div class="info-area layer-apply-yes layer-apply mt-0">
                     <span class="ico"></span>
                     <p class="desc">
-                        이용권을 신청하시기 전 <span class="color-primary-1c">‘평생교육이용권이란?’</span>을
+                        이용권을 신청하시기 전 <span class="col-pri">‘평생교육이용권이란?’</span>을
                         <br class="lg-only">
                         클릭하여 사업내용을 충분히 숙지하신 후 신청 바랍니다
                     </p>
@@ -477,7 +476,7 @@
     </div>
     <!-- 신청 기간 아닐 시 팝업 (trigger X) -->
     <div class="layer-pop" data-pop="pop-2">
-        <div class="layer-content layer-apply-content" style="--max-width: 640px">
+        <div class="layer-content layer-apply-content" style="--max-width: 640px;">
             <div class="layer-scroll">
                 <div class="info-area layer-apply-no layer-apply mt-0">
                     <span class="ico"></span>
