--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -167,7 +166,7 @@
                                 <dt><label for="srch01">사용기관명</label></dt>
                                 <dd>
                                     <div class="search-input mw-set">
-                                        <input type="text" id="srch01">
+                                        <input type="text" id="srch01" class="w-100">
                                     </div>
                                 </dd>                   
                             </dl>
@@ -336,8 +335,7 @@
                     <tbody>
                         <tr>
                             <td class="txt-l">
-                                (주)중앙자동차운전전문학원
-                                <span class="category-label new-label">N</span>
+                                (주)중앙자동차운전전문학원<span class="category-label new-label">N</span>
                             </td>
                             <td class="txt-l">인천광역시 서구</td>
                             <td>오프라인</td>
@@ -348,10 +346,7 @@
                                 </a>
                             </td>
                             <td class="txt-l">
-                                <i class="ico-cont-32 ico organ01">
-                                    <span class="blind">기관 연계사업 유형</span>
-                                </i>
-                                <span>학점은행제</span>
+                                <i class="ico-cont-32 ico organ01"><span class="blind">기관 연계사업 유형</span></i><span>학점은행제</span>
                             </td>
                         </tr>
                         <tr>
@@ -370,10 +365,7 @@
                                 </a>
                             </td>
                             <td class="txt-l">
-                                <i class="ico-cont-32 ico organ02">
-                                    <span class="blind">기관 연계사업 유형</span>
-                                </i>
-                                <span>평생학습계좌제</span>
+                                <i class="ico-cont-32 ico organ02"><span class="blind">기관 연계사업 유형</span></i><span>평생학습계좌제</span>
                             </td>
                         </tr>
                         <tr>
@@ -391,10 +383,7 @@
                                 </a>
                             </td>
                             <td class="txt-l">
-                                <i class="ico-cont-32 ico organ03">
-                                    <span class="blind">기관 연계사업 유형</span>
-                                </i>
-                                <span>성인문화교육</span>
+                                <i class="ico-cont-32 ico organ03"><span class="blind">기관 연계사업 유형</span></i><span>성인문화교육</span>
                             </td>
                         </tr>
                     </tbody>
