--- a/work/LAP_003.html
+++ b/work/LAP_003.html
@@ -130,8 +130,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -158,7 +157,7 @@
             <h2 class="page-header-tit">우수이용자 신청</h2>
             <p class="page-header-desc">우수이용자들을 위한 평생교육이용권 추가 신청 화면입니다.</p>
         </div>
-        <ul class="step-list flex-acjc">
+        <ul class="step-list two-step flex-acjc">
             <li class="step step-prev">
                 <span class="step-icon step_qualification_check"></span>
                 <span class="step-name">01</span>
