--- a/work/LIP_601.html
+++ b/work/LIP_601.html
@@ -131,8 +131,7 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a></li>
                                 <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
@@ -159,7 +158,7 @@
             <h2 class="page-header-tit">개명 및 개번 신청</h2>
         </div>
         <div class="contents objection">
-            <div class="conts-header">
+            <div class="conts-header no-gap">
                 <h3>신청 정보</h3>
                 <small><em class="col-red">*</em> 평생교육이용권 신청 시 입력한 성명, 주민등록번호를 작성해주세요.</small>
             </div>
@@ -265,7 +264,7 @@
                             <td><input type="text" value="" class="fixed-value" /></td>
                         </tr>
                         <tr>
-                            <th class="txt-l">변경 전 주민등록번호</th>
+                            <th class="txt-l">변경 전<br>주민등록번호</th>
                             <td>
                                 <div class="flex-ac input-reset">
                                     <input type="text" id="b" maxlength="6" value="901231" readonly="" class="readonly-txt" style="width: 68px;">
@@ -275,7 +274,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l must-type">변경 후 주민등록번호</th>
+                            <th class="txt-l must-type">변경 후<br>주민등록번호</th>
                             <td>
                                 <div class="flex-ac gap-10 fixed-value input-idNum">
                                     <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
@@ -284,7 +283,7 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr>
+                        <tr class="hidden">
                             <th class="txt-l">변경희망일</th>
                             <td><input type="date" id="date01"></td>
                         </tr>
